fix a spacing issue

--- a/src/sa_web/static/sass/_buttons.sass
+++ b/src/sa_web/static/sass/_buttons.sass
@@ -222,7 +222,6 @@
 
 /* Story bar styles */
 .btn-previous-story-nav
-  width: 10%
   color: white
   cursor: pointer
   &:before
@@ -232,7 +231,6 @@
     color: $button-background-hover-blue
   
 .btn-next-story-nav
-  width: 10%
   color: white
   cursor: pointer
   &:before
